Translate mapping slides

--- a/teoricas/teorica_07/slides.tex
+++ b/teoricas/teorica_07/slides.tex
@@ -19,23 +19,23 @@
 \renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
 \bibliography{../../common/bibliography.bib}
 
-\subtitle{Mapeo}
-\title{Robótica Móvil}
+\subtitle{Mapping}
+\title{Mobile Robotics}
 \author{Taihú Pire}
-\institute{Laboratorio de Robótica}
+\institute{Robotics Laboratory}
 \titlegraphic{\includegraphics[width=0.4\textwidth]{images/cifasis_logo.pdf}}
 \date{}
 
 
 \begin{document}
-	
+
 	% add title page
 	\frame{\titlepage}
-	
-	\section{Mapa: Grilla de ocupación}
+
+	\section{Map: Occupancy Grid}
 	\input{src/mapping.tex}
-	
-	\section{Bibliografía}
+
+	\section{Bibliography}
 	\input{src/bibliography.tex}
-	
+
 \end{document}
